--- a/themes/airevisuelle/layouts/articles/single.html
+++ b/themes/airevisuelle/layouts/articles/single.html
@@ -5,7 +5,7 @@
 <main class="main" id="{{ .Type }}-indiv">
 
         <!-- Page title -->
-        <section id="page-title" class="background-image background-overlay-dark header-single-blog" style="background-image:url('/xl{{.Params.image}}');">
+        <section id="page-title" class="background-image background-overlay-dark header-single-blog" style="background-image:url('/xl{{.Params.image}}');{{ with .Params.background }} background-position: {{ . }};{{ end }}">
             <div class="container">
 
                 <div class="page-title">
