--- a/themes/airevisuelle/layouts/promotions/list.html
+++ b/themes/airevisuelle/layouts/promotions/list.html
@@ -32,7 +32,7 @@
                                 
                                 <h2><a href="#nothing">{{.Params.titre}}</a></h2>
                                 <span class="post-meta-date"><i class="fa fa-calendar-o"></i>{{ if .Params.annuel }}{{ i18n "permanent_discount" }}{{else}}{{.Params.startdate}} - {{.Params.enddate}}{{end}}</span>
-                                {{ .Content }}
+                                <p>{{ .Content | markdownify }}</p>
                             </div>
                         </div>
                     </div>
