--- a/themes/airevisuelle/layouts/index.html
+++ b/themes/airevisuelle/layouts/index.html
@@ -17,7 +17,7 @@
       </div>
   </div> -->
   <div id="slider" class="inspiro-slider slider-fullscreen arrows-large arrows-creative dots-creative" data-height-xs="360">
-      <div class="slide background-overlay-grey" style="background-image: url('/img/header-aout.jpg')">
+      <div class="slide background-overlay-grey" style="background-image: url('/img/promotion-septembre-2019.jpg')">
           <div class="container">
               <div class="slide-captions text-light">
                 <a href='{{.Site.Data.settings.rdvlink}}&language={{- .Lang -}}' target="_blank">
