--- a/themes/airevisuelle/layouts/index.html
+++ b/themes/airevisuelle/layouts/index.html
@@ -17,11 +17,11 @@
       </div>
   </div> -->
   <div id="slider" class="inspiro-slider slider-fullscreen arrows-large arrows-creative dots-creative" data-height-xs="360">
-      <div class="slide background-overlay-grey" style="background-image: url('/img/banner-orgreen.jpg')">
+      <div class="slide background-overlay-grey" style="background-image: url('/img/airevisuelle-banner-decembre-janvier-2019.jpg')">
           <div class="container">
               <div class="slide-captions text-light">
                 <a href='{{.Site.Data.settings.rdvlink}}&language={{- .Lang -}}' target="_blank">
-                  <div class="new-caption">
+                  <div class="new-caption" style="max-width: 600px;">
                     <h2>{{ .Params.slidertext | markdownify }}</h2>
                   </div>
                   <!-- <img src="/quart/img/prodesign-logo.jpg" alt="Prodesign Logo" /> -->
