--- a/themes/airevisuelle/layouts/index.html
+++ b/themes/airevisuelle/layouts/index.html
@@ -20,7 +20,8 @@
       <div class="slide background-overlay-grey" style="background-image: url('/img/airevisuelle-banner-decembre-janvier-2019.jpg')">
           <div class="container">
               <div class="slide-captions text-light">
-                <a href='{{.Site.Data.settings.rdvlink}}&language={{- .Lang -}}' target="_blank">
+                <!-- <a href='{{.Site.Data.settings.rdvlink}}&language={{- .Lang -}}' target="_blank"> -->
+                <a href="{{.Params.sliderurl}}">
                   <div class="new-caption" style="max-width: 600px;">
                     <h2>{{ .Params.slidertext | markdownify }}</h2>
                   </div>
