--- a/themes/airevisuelle/layouts/partials/header/nav.html
+++ b/themes/airevisuelle/layouts/partials/header/nav.html
@@ -10,7 +10,7 @@
                 <li class="dropdown"> <a href='{{ $.Scratch.Get "servicesPage" }}'>Services</a>
                     {{- partial "header/dropdown1.html" . -}}
                 </li>
-                <li> <a href="{{.Site.BaseURL}}services/examen-de-la-vue">Examen de la vue</a></li>
+                <li> <a href="{{.Site.BaseURL}}rendez-vous-optometriste">Rendez-vous en ligne</a></li>
                 <li> <a href='{{ $.Scratch.Get "promotionsPage" }}'>Promotions</a></li> 
                 <li> <a href='{{ $.Scratch.Get "contactPage" }}'>Contact</a></li>
             </ul>
@@ -22,7 +22,7 @@
                 <li class="dropdown"> <a href='{{ $.Scratch.Get "servicesPage" }}'>Services</a>
                     {{- partial "header/dropdown1.html" . -}}
                 </li>
-                <li> <a href="{{.Site.BaseURL}}en/services/eye-exam">Eye exam</a></li>
+                <li> <a href="{{.Site.BaseURL}}en/appointment-optometrist">Appointment</a></li>
                 <li> <a href='{{ $.Scratch.Get "promotionsPage" }}'>Promotions</a></li> 
                 <li> <a href='{{ $.Scratch.Get "contactPage" }}'>Contact</a></li>
             </ul>
