--- a/themes/airevisuelle/layouts/partials/site-footer.html
+++ b/themes/airevisuelle/layouts/partials/site-footer.html
@@ -81,7 +81,7 @@
             <!-- Footer widget area 3 -->
             <div class="widget">
               <h4 style="margin-bottom: 10px">{{ i18n "financement" }}</h4>
-              <img src="/img/accord-d-desjardins.png" alt="Accord D" style="max-width: 80%">
+              <!-- <img src="/img/accord-d-desjardins.png" alt="Accord D" style="max-width: 80%"> -->
             </div>
             <!-- end: Footer widget area 3 -->  
           </div>
@@ -138,4 +138,3 @@
     </div>
   </footer>
   <!-- end: Footer -->
-
