--- a/themes/airevisuelle/layouts/services/single.html
+++ b/themes/airevisuelle/layouts/services/single.html
@@ -115,7 +115,7 @@
                             <!--Services-->
                             <div class="widget clearfix widget-categories">
                                 <h4 class="widget-title">{{ i18n "financement" }}</h4>
-                                <img src="/img/accord-d-desjardins.png" alt="Accord D" style="max-width: 80%">
+                                <!--<img src="/img/accord-d-desjardins.png" alt="Accord D" style="max-width: 80%">-->
                             </div>
                             <!--End: Services-->
 
