Changement du lien de booking (ajout de ? dan le URL)
Ajout de ? dans le URL

--- a/themes/airevisuelle/layouts/index.html
+++ b/themes/airevisuelle/layouts/index.html
@@ -10,7 +10,7 @@
                   </p>
                   <div id="ctas">
                       <a class="btn btn-rounded btn-reveal btn-reveal-left" href='{{ $.Scratch.Get "promotionsPage" }}'><span>{{ i18n "our_promotions" }}</span><i class="fa fa-arrow-right"></i></a>
-                      <a class="btn btn-rounded btn-reveal btn-reveal-left btn-light" href='{{.Site.Data.settings.rdvlink}}&language={{- .Lang -}}' target="_blank"><span class="btn-label">{{ i18n "book_online" }}</span><i class="fa fa-arrow-right"></i></a>
+                      <a class="btn btn-rounded btn-reveal btn-reveal-left btn-light" href='{{.Site.Data.settings.rdvlink}}?language={{- .Lang -}}' target="_blank"><span class="btn-label">{{ i18n "book_online" }}</span><i class="fa fa-arrow-right"></i></a>
                   </div>
               </div>
           </div>
@@ -20,7 +20,7 @@
       <div class="slide background-overlay-grey" style="background-image: url('/img/header-juin-juillet.jpg')">
           <div class="container">
               <div class="slide-captions text-light">
-                <a href='{{.Site.Data.settings.rdvlink}}&Language={{- .Lang -}}' target="_blank">
+                <a href='{{.Site.Data.settings.rdvlink}}?Language={{- .Lang -}}' target="_blank">
                   <div class="new-caption" style="max-width: 600px;">
                     <h2>{{ .Params.slidertext | markdownify }}</h2>
                   </div>
