promo button url improvements;

--- a/themes/airevisuelle/layouts/partials/site/promocta.html
+++ b/themes/airevisuelle/layouts/partials/site/promocta.html
@@ -23,14 +23,18 @@
             {{.Site.Data.promo.general.fr.description}}
         </p>
 
-        <a class="btn btn-default icon-left" href="{{$.Site.BaseURL}}{{.Site.Data.promo.general.fr.btnurl}}"><span>{{.Site.Data.promo.general.fr.btntxt}}</span></a>
+        <a class="btn btn-default icon-left" href='{{ if in .Site.Data.promo.general.fr.btnurl "http" }}{{.Site.Data.promo.general.fr.btnurl}}{{else}}{{$.Site.BaseURL}}{{.Site.Data.promo.general.fr.btnurl}}{{ end }}'>
+          <span>{{.Site.Data.promo.general.fr.btntxt}}</span>
+        </a>
       {{ else if eq .Lang "en" }}
       	<h2>{{.Site.Data.promo.general.en.title}}</h2>
         <p class="lead">
             {{.Site.Data.promo.general.en.description}}
         </p>
 
-        <a class="btn btn-default icon-left" href="{{$.Site.BaseURL}}{{.Site.Data.promo.general.en.btnurl}}"><span>{{.Site.Data.promo.general.en.btntxt}}</span></a>
+        <a class="btn btn-default icon-left" href='{{ if in .Site.Data.promo.general.en.btnurl "http" }}{{.Site.Data.promo.general.en.btnurl}}{{else}}{{$.Site.BaseURL}}{{.Site.Data.promo.general.en.btnurl}}{{ end }}'>
+          <span>{{.Site.Data.promo.general.en.btntxt}}</span>
+        </a>
       {{ end }}
       {{ end }}
     </div>
