--- a/themes/airevisuelle/layouts/partials/header/topbar.html
+++ b/themes/airevisuelle/layouts/partials/header/topbar.html
@@ -3,11 +3,11 @@
 <div class="info-banner">
 	{{- if eq .Lang "fr" -}}
 		{{- range .Site.Data.settings.info_banner.fr -}}
-			<a href="{{.url}}" target="_blank">{{.text}}</a>
+			<a class="info-banner_link" href="{{.url}}" target="_blank">{{.text}}</a>
 		{{- end -}}
 		{{- else if eq .Lang "en" -}}
 		{{- range .Site.Data.settings.info_banner.en -}}
-			<a href="{{.url}}" target="_blank">{{.text}}</a>
+			<a class="info-banner_link" href="{{.url}}" target="_blank">{{.text}}</a>
 		{{- end -}}
 	{{- end -}}
 </div>
