--- a/themes/airevisuelle/layouts/singles/rendez-vous.html
+++ b/themes/airevisuelle/layouts/singles/rendez-vous.html
@@ -5,7 +5,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 clearfix">
-                   <h1 class="text-uppercase {{ if not .Params.both }}text-center{{ end }}">{{.Params.titre}}</h1> 
+                   <h1 class="text-uppercase {{ if not .Params.both }}text-center{{ end }}">{{.Params.titre}}</h1>
                 </div>
                 {{ if .Params.od }}
                 <div class="col-md-6 {{ if not .Params.both }}col-md-offset-3{{ end }}">
@@ -26,7 +26,7 @@
                         <div class="col-md-12">
                             <p>{{ .Params.odcontent.ligne1 | markdownify -}}</p>
                             <p>{{ .Params.odcontent.ligne2 | markdownify -}}</p>
-                            <a class="btn btn-rounded btn-reveal btn-reveal-left" href='{{.Site.Data.settings.rdvlink}}?Language={{- .Lang -}}' target="_blank" style="display: inline-block;"><span class="btn-label">{{ i18n "book_online" }}</span><i class="fa fa-arrow-right"></i></a>
+                            <a class="btn btn-rounded btn-reveal btn-reveal-left" href='{{.Site.Data.globals.rdvlink}}?Language={{- .Lang -}}' target="_blank" style="display: inline-block;"><span class="btn-label">{{ i18n "book_online" }}</span><i class="fa fa-arrow-right"></i></a>
                         </div>
                     </div>
                     <div class="row m-t-40 hidden-xs hidden-sm">
@@ -78,7 +78,7 @@
                         </div>
                     </div>
                     <form class="widget-contact-form" action="/merci" role="form" method="post" name="{{.Params.identifiant}}-{{.Lang}}" netlify>
-                        
+
                         <div class="row">
                             <div class="form-group col-sm-6">
                                 <label for="name">{{ i18n "name" }}</label>
@@ -108,7 +108,7 @@
                                     <option value="PM">PM</option>
                                 </select>
                             </div>
-                        </div> 
+                        </div>
                         <div class="row">
                             <div class="form-group col-sm-6 col-md-3">
                                 <label for="subject">{{ i18n "wear_eyeglasses" }}</label>
