july content updates;

--- a/themes/airevisuelle/layouts/_default/baseof.html
+++ b/themes/airevisuelle/layouts/_default/baseof.html
@@ -11,6 +11,7 @@
 	{{ $.Scratch.Add "bookingOptiPage" ("rendez-vous-opticien/" | absLangURL) }}
 	{{ $.Scratch.Add "bookingOptoPage" ("rendez-vous-optometriste/" | absLangURL) }}
 	{{ $.Scratch.Add "catalogPage" ("catalogue/" | absLangURL) }}
+	{{ $.Scratch.Add "deconfinementPage" ("deconfinement/" | absLangURL) }}
 	{{ else if eq .Lang "en" }}
 	{{ $.Scratch.Add "contactPage" ("contact-us/" | absLangURL) }}
 	{{ $.Scratch.Add "aboutPage" ("about/" | absLangURL) }}
@@ -18,6 +19,7 @@
 	{{ $.Scratch.Add "bookingOptiPage" ("appointment-optician/" | absLangURL) }}
 	{{ $.Scratch.Add "bookingOptoPage" ("appointment-optometrist/" | absLangURL) }}
 	{{ $.Scratch.Add "catalogPage" ("catalog/" | absLangURL) }}
+	{{ $.Scratch.Add "deconfinementPage" ("deconfinement/" | absLangURL) }}
 	{{ end }}
 	{{- partial "site-head.html" . -}}
 	<body class="">
