--- a/themes/airevisuelle/layouts/index.html
+++ b/themes/airevisuelle/layouts/index.html
@@ -17,10 +17,11 @@
       </div>
   </div> -->
   <div id="slider" class="inspiro-slider slider-fullscreen arrows-large arrows-creative dots-creative" data-height-xs="360">
-      <div class="slide background-overlay-grey" style="background-image: url('/img/banner-may-2020.jpg')">
+      <div class="slide background-overlay-grey" style="background-image: url('/img/banner-mars-2020.png')">
           <div class="container">
               <div class="slide-captions text-light">
-                <a href='{{.Site.Data.settings.rdvlink}}?Language={{- .Lang -}}' target="_blank">
+                <!-- <a href='{{.Site.Data.settings.rdvlink}}?Language={{- .Lang -}}' target="_blank"> -->
+                <a href='{{ $.Scratch.Get "promotionsPage"}}'>
                   <div class="new-caption" style="max-width: 600px;">
                     <h2>{{ .Params.slidertext | markdownify }}</h2>
                   </div>
