new page added; general updates;

--- a/themes/airevisuelle/layouts/_default/baseof.html
+++ b/themes/airevisuelle/layouts/_default/baseof.html
@@ -12,6 +12,7 @@
 	{{ $.Scratch.Add "bookingOptoPage" ("rendez-vous-optometriste/" | absLangURL) }}
 	{{ $.Scratch.Add "catalogPage" ("catalogue/" | absLangURL) }}
 	{{ $.Scratch.Add "deconfinementPage" ("deconfinement/" | absLangURL) }}
+	{{ $.Scratch.Add "magasinerEnLignePage" ("magasiner-en-ligne/" | absLangURL) }}
 	{{ else if eq .Lang "en" }}
 	{{ $.Scratch.Add "contactPage" ("contact-us/" | absLangURL) }}
 	{{ $.Scratch.Add "aboutPage" ("about/" | absLangURL) }}
@@ -20,6 +21,7 @@
 	{{ $.Scratch.Add "bookingOptoPage" ("appointment-optometrist/" | absLangURL) }}
 	{{ $.Scratch.Add "catalogPage" ("catalog/" | absLangURL) }}
 	{{ $.Scratch.Add "deconfinementPage" ("deconfinement/" | absLangURL) }}
+	{{ $.Scratch.Add "magasinerEnLignePage" ("online-shopping/" | absLangURL) }}
 	{{ end }}
 	{{- partial "site-head.html" . -}}
 	<body class="">
