--- a/themes/airevisuelle/layouts/partials/header/topbar.html
+++ b/themes/airevisuelle/layouts/partials/header/topbar.html
@@ -19,7 +19,12 @@
 				<ul class="top-menu">
 					<li class="separated"><a href="tel:{{.Site.Data.settings.mphone}}">{{.Site.Data.settings.phone}}</a></li>
 					<li><a href="mailto:{{.Site.Data.settings.email}}">{{.Site.Data.settings.email}}</a></li>
-					<li><a href="https://www.visionavenue.ca/fr/" target="_blank" style="display: inline-block;" class="hidden-xs hidden-sm">Vision Avenue</a></li>
+					<li>
+						<a class="btn hidden-xs hidden-sm" href='{{ $.Scratch.Get "magasinerEnLignePage"}}'
+							style="display: inline-block; margin: 0; height: 30px; padding: 7px 10px; text-shadow: none; text-transform: none;">
+							{{- if eq .Lang "fr" -}}{{.Site.Data.settings.shopping.fr.text}}{{- else if eq .Lang "en" -}}{{.Site.Data.settings.shopping.en.text}}{{- end -}}
+						</a>
+					</li>
 				</ul>
 			</div>
 			<div class="col-sm-6 hidden-xs">
