banner & magasiner-en-ligne page updates;

--- a/themes/airevisuelle/layouts/singles/magasiner-en-ligne.html
+++ b/themes/airevisuelle/layouts/singles/magasiner-en-ligne.html
@@ -49,6 +49,7 @@
       <!-- end: Portfolio -->
     </div>
   </section>
+  {{partial "site/promocta.html" .}}
   <!-- end: Page Content -->
 </main>
 {{ end }}
