--- a/themes/airevisuelle/layouts/partials/header/topbar.html
+++ b/themes/airevisuelle/layouts/partials/header/topbar.html
@@ -1,6 +1,6 @@
 <!-- Topbar -->
 {{ if .Site.Data.settings.info_banner }}
-<div class="info-banner">
+<div class="info-banner" style="background-color: #232323;">
 	{{- if eq .Lang "fr" -}}
 		{{- range .Site.Data.settings.info_banner.fr -}}
 			<a class="info-banner_link" href='{{ $.Scratch.Get "deconfinementPage"}}'>{{.text}}</a>
@@ -21,7 +21,7 @@
 					<li><a href="mailto:{{.Site.Data.settings.email}}">{{.Site.Data.settings.email}}</a></li>
 					<li>
 						<a class="btn hidden-xs hidden-sm" href='{{ $.Scratch.Get "magasinerEnLignePage"}}'
-							style="display: inline-block; margin: 0; height: 30px; padding: 7px 10px; text-shadow: none; text-transform: none;">
+							style="display: inline-block; margin: 0; height: 20px; padding: 2px 6px;; text-shadow: none; text-transform: none;">
 							{{- if eq .Lang "fr" -}}{{.Site.Data.settings.shopping.fr.text}}{{- else if eq .Lang "en" -}}{{.Site.Data.settings.shopping.en.text}}{{- end -}}
 						</a>
 					</li>
