--- a/themes/airevisuelle/layouts/partials/header/topbar.html
+++ b/themes/airevisuelle/layouts/partials/header/topbar.html
@@ -19,12 +19,15 @@
 				<ul class="top-menu">
 					<li class="separated"><a href="tel:{{.Site.Data.settings.mphone}}">{{.Site.Data.settings.phone}}</a></li>
 					<li><a href="mailto:{{.Site.Data.settings.email}}">{{.Site.Data.settings.email}}</a></li>
+					{{$shopBadgeSettings := .Site.Data.settings.shopping}}
+					{{if $shopBadgeSettings}}
 					<li>
 						<a class="btn hidden-xs hidden-sm" href='{{ $.Scratch.Get "magasinerEnLignePage"}}'
 							style="display: inline-block; margin: 0; height: 20px; padding: 2px 6px;; text-shadow: none; text-transform: none;">
-							{{- if eq .Lang "fr" -}}{{.Site.Data.settings.shopping.fr.text}}{{- else if eq .Lang "en" -}}{{.Site.Data.settings.shopping.en.text}}{{- end -}}
+							{{- if eq .Lang "fr" -}}{{$shopBadgeSettings.fr.text}}{{- else if eq .Lang "en" -}}{{$shopBadgeSettings.en.text}}{{- end -}}
 						</a>
 					</li>
+					{{end}}
 				</ul>
 			</div>
 			<div class="col-sm-6 hidden-xs">
