replace vision avenue with avenue eyewear

--- a/themes/airevisuelle/layouts/catalogue/list.html
+++ b/themes/airevisuelle/layouts/catalogue/list.html
@@ -36,14 +36,14 @@
 				              {{ end }}
 				              <!-- portfolio item -->
 		                  <div class="portfolio-item img-zoom pf-illustrations pf-media hover-3d pf-icons pf-Media">
-		                  	<a href='{{ i18n "visionavenue" }}' target="_blank">
+		                    <a href='{{ i18n "avenue" }}' target="_blank">
 		                      <div class="portfolio-item-wrap">
 		                          <div class="portfolio-image">
-		                              <a href='{{ i18n "visionavenue" }}' target="_blank"><img src="/quart/img/vision-avenue.png" alt="Vision Avenue"></a>
+		                              <a href='{{ i18n "avenue" }}' target="_blank"><img src="/quart/img/avenue-logo.png" alt="Avenue Eyewear"></a>
 		                          </div>
 		                          <div class="portfolio-description">
-		                              <a href='{{ i18n "visionavenue" }}' target="_blank">
-		                                  <h3>{{ i18n "buy_visionavenue" }}</h3>
+		                              <a href='{{ i18n "avenue" }}' target="_blank">
+		                                  <h3>{{ i18n "buy_avenue" }}</h3>
 		                              </a>
 		                          </div>
 		                      </div>
