--- a/themes/airevisuelle/layouts/partials/site-footer.html
+++ b/themes/airevisuelle/layouts/partials/site-footer.html
@@ -94,7 +94,7 @@
             <div class="widget">
               <h4>{{ i18n "discover_partners" }}</h4>
               <ul class="list-icon list-icon-arrow">
-                <li><a href='{{ i18n "visionavenue" }}' target="_blank">Vision Avenue</a></li>
+                <li><a href='{{ i18n "avenue" }}' target="_blank">Avenue Eyewear</a></li>
               </ul>
             </div>
             <!-- end: Footer widget area 3 --> 
