add class for align hero text at right
Signed-off-by: serg <contact@sergfurtak.com>

--- a/themes/airevisuelle/assets/scss/custom.scss
+++ b/themes/airevisuelle/assets/scss/custom.scss
@@ -444,7 +444,10 @@ section {
 			max-width: 100%;
 		}
 	}
+}
 
+.hero-text-at-right {
+	margin-left: auto;
 }
 @media (max-width: 992px) {
 	#slider .parallax-container {
